--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <li>100 g di <b>zucchero</b></li>
         <li>65 g di <b>lievito</b></li>
     </ul>
+    <h2>Procedimento</h2>
+    <ol>
+        <li>Mettere <b>in una ciotola</b> l'uovo grande (o due piccole) insieme allo <b>zucchero</b> e sbatterli con una forchetta o con una frusta a mano.</li>
+        <li>Aggiungete il <b>latte</b> a temperatura ambiente e continuate a sbattere con la forchetta o con la frusta l'impasto senza <b>burro</b>.</li>
+        <li>Aggiungete poco a poco la <b>farina</b> setacciata e il <b>lievito</b> in polvere per dolci mentre continuate a mescolare a mano in maniera che non si formino grumi e che il composto rimanga liscio e omogeneo.</li>
+    </ol>
 </body>
 
 </html>
