Aggiunto Varianti e altre info

--- a/index.html
+++ b/index.html
@@ -20,10 +20,22 @@
     </ul>
     <h2>Procedimento</h2>
     <ol>
-        <li>Mettere <b>in una ciotola</b> l'uovo grande (o due piccole) insieme allo <b>zucchero</b> e sbatterli con una forchetta o con una frusta a mano.</li>
-        <li>Aggiungete il <b>latte</b> a temperatura ambiente e continuate a sbattere con la forchetta o con la frusta l'impasto senza <b>burro</b>.</li>
-        <li>Aggiungete poco a poco la <b>farina</b> setacciata e il <b>lievito</b> in polvere per dolci mentre continuate a mescolare a mano in maniera che non si formino grumi e che il composto rimanga liscio e omogeneo.</li>
+        <li>Mettere <b>in una ciotola</b> l'uovo grande (o due piccole) insieme allo <b>zucchero</b> e sbatterli con una
+            forchetta o con una frusta a mano.</li>
+        <li>Aggiungete il <b>latte</b> a temperatura ambiente e continuate a sbattere con la forchetta o con la frusta
+            l'impasto senza <b>burro</b>.</li>
+        <li>Aggiungete poco a poco la <b>farina</b> setacciata e il <b>lievito</b> in polvere per dolci mentre
+            continuate a mescolare a mano in maniera che non si formino grumi e che il composto rimanga liscio e
+            omogeneo.</li>
     </ol>
+    <h2>Varianti</h2>
+    <p>Non occorre mettere burro nella padella:<br>
+    in questo modo saranno a tutti gli effetti dei pancake senza burro!</p>
+
+    <p><b>Non schiacciate i pancake!</b> Lasciateli belli gonfi.</p>
+    <p>La mia ricetta non prevede burro, quindi non utilizzatelo, non serve.</p>
+    <hr class="solid">
+    Ricetta presa da Giallo Zafferano
 </body>
 
 </html>
