Sistemata la formattazione e terminato il lavoro

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     </ol>
     <h2>Varianti</h2>
     <p>Non occorre mettere burro nella padella:<br>
-    in questo modo saranno a tutti gli effetti dei pancake senza burro!</p>
+        in questo modo saranno a tutti gli effetti dei pancake senza burro!</p>
 
     <p><b>Non schiacciate i pancake!</b> Lasciateli belli gonfi.</p>
     <p>La mia ricetta non prevede burro, quindi non utilizzatelo, non serve.</p>
     <hr class="solid">
-    Ricetta presa da Giallo Zafferano
+    <p>Ricetta presa da Giallo Zafferano</p>
 </body>
 
 </html>
